Fixed overlapping of schedule dashboard voyages in timeline
Workitems:
#9257 UI/UX > Schedule Dashboard- More fields visible in the popup
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C26649

--- a/ShipTech10/app/css/timeline.css
+++ b/ShipTech10/app/css/timeline.css
@@ -141,7 +141,7 @@ schedule-dashboard-timeline .vis-inner {
 schedule-dashboard-timeline .vis-item.vis-selected {
 	box-shadow: 0 0 0 2px #ffc200 inset;
 	/*transform: scale(0.95);*/
-	z-index: 99;
+	z-index: 999999!important;
 }
 
 .vis-voyage-content {
